--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "alexzhang.co",
   "dependencies": {
     "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
